--- a/templates/todolist.html
+++ b/templates/todolist.html
@@ -24,34 +24,34 @@
       </div>
       </form>
      <br>
-    <table class="table  table-bordered">
+    <table class="table  table-bordered text-center">
         <thead class=table-dark>
-            <tr>
-              <th scope="col">Task</th>
-              <th scope="col">Done</th>
-              <!-- <th scope="col">Due Date</th> -->
-              <th scope="col">Edit</th>
-              <th scope="col">Delete</th>
+            <tr class="row">
+              <th class="col-7">Task</th>
+              <th class="col-3">Done</th>
+              <!-- <th class="col">Due Date</th> -->
+              <th class="col-1">Edit</th>
+              <th class="col-1">Delete</th>
             </tr>
           </thead>
           <tbody>
             {% if all_tasks %}
               {% for obj in all_tasks %}
               {% if obj.done %}
-            <tr class=table-success>
-              <td>{{obj.task}}</th>
-              <td><a href="{% url 'pending' obj.id %}">Mark this Pending</a></td>
-              <!-- <td>{{obj.due_date}}</td> -->
-              <td><a href="{% url 'edit_task' obj.id %}">Edit</a></td>
-              <td><a href="{% url 'delete_task' obj.id %}">Delete</a></td>
+            <tr class="table-success row">
+              <td class=col-7>{{obj.task}}</td>
+              <td class=col-3><a href="{% url 'pending' obj.id %}"><button type="button" class="btn btn-dark">Mark this Pending</button></a></td>
+              <!-- <td class=col-1>{{obj.due_date}}</td > -->
+              <td class=col-1><a href="{% url 'edit_task' obj.id %}"><button type="button" class="btn btn-warning">Edit</button></a></td>
+              <td class=col-1><a href="{% url 'delete_task' obj.id %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
             </tr>
             {% else %}
-            <tr>
-                <td>{{obj.task}}</th>
-                <td><a href="{% url 'complete' obj.id %}">Mark this Completed</a></td>
-                <!-- <td>{{obj.due_date}}</td> -->
-                <td><a href="{% url 'edit_task' obj.id %}">Edit</a></td>
-                <td><a href="{% url 'delete_task' obj.id %}">Delete</a></td>
+            <tr class="row">
+                <td class=col-7>{{obj.task}}</td>
+                <td class=col-3><a href="{% url 'complete' obj.id %}"><button type="button" class="btn btn-dark">Mark this Completed</button></a></td>
+                <!-- <td class=col-1>{{obj.due_date}}</td -->
+                <td class=col-1><a href="{% url 'edit_task' obj.id %}"><button type="button" class="btn btn-warning">Edit</button></a></td>
+                <td class=col-1><a href="{% url 'delete_task' obj.id %}"><button type="button" class="btn btn-danger">Delete</button></a></td>
               </tr>
               {% endif %}
             {% endfor %}
