--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -15,4 +15,18 @@
         </div>
       </div>
     </div>
+    
+    <div class="d-grid gap-2 d-flex">
+    {% if user.is_authenticated %}
+   
+      <div class="p-2  bg-dark text-white" style="white-space: nowrap;margin-right:4px">Logged in as {{user.username}}</div>
+      <a href="{% url 'logout' %}" style="margin-right: 9px;">
+      <button class="btn btn-info text-white  my-2 my-sm-0" type="submit" style="margin-right:10px">Logout</button></a>
+    {% else %}
+    <a href="{% url 'login' %}" >
+      <button class="btn btn-success me-md-2 " type="submit" >Login</button></a>
+      <a href="{% url 'register' %}" style="margin-right: 9px;">
+        <button class="btn btn-primary " type="submit" style="margin-right:10px">Register</button></a>
+    {%endif%}
+    </div>
   </nav>
