--- a/templates/login.html
+++ b/templates/login.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 {% load crispy_forms_tags %}
-{% block title %} Register {% endblock %}
+{% block title %} Login {% endblock %}
 {% block content %}
 <div class="container">
 <br>
-<h2>Register On Taskmate</h2>
+<h2>Login On Taskmate</h2>
     {% if messages %}
     {% for message in messages %}
     <div class="alert alert-info alert-dismissible fade show" role="alert">
@@ -17,8 +17,8 @@
     {% endif %}
     <form method="POST" class="mt-3 col-6">
         {% csrf_token %}
-        {{ register_form|crispy }}
-    <button class="btn btn-primary mb-5" type="submit">Register</button>
+        {{ form|crispy }} <!--form is context name that django uses-->
+    <button class="btn btn-primary mb-5" type="submit">Login</button>
     </form>
 </div>
 
