--- a/templates/edit.html
+++ b/templates/edit.html
@@ -5,7 +5,7 @@
 
 <div class="container">
     <br>
-    {% if task.manager==request.user %}
+    {% if task_obj.manager==request.user %}
 <form method='POST' class="row">
     {% csrf_token %}
     <label class="col-md-2"></label>
