--- a/templates/edit.html
+++ b/templates/edit.html
@@ -19,6 +19,7 @@
      </form>
      {% else %}
      <p>Access Restricted , You are Not Allowed!</p>
+    {% endif %}
     </div>
 
 {% endblock %}
